# Agentic_Trading

./: .gitignore  CLAIMS.md  HYPOTHESES.md  README.md  REPRODUCING.md  pyproject.toml
configs/: duopoly_explore.yaml  duopoly_h3.yaml  llm_smoke.yaml  smith_explore.yaml  smith_h1.yaml  smith_h1_frontier.yaml  ssw_explore.yaml  ssw_h2.yaml  zi_baseline.yaml
notebooks/: 00_review_walkthrough.ipynb  01_exchange_and_zi.ipynb  02_llm_harness.ipynb  03_smith_convergence.ipynb  04_ssw_bubbles.ipynb  05_duopoly_collusion.ipynb
report/: SUMMARY_FOR_REVIEW.md  related_work.md  report.md
results/: MANIFEST.sha256  budget.md  contamination_probe.json  contamination_probe.md  exclusions.md
results/duopoly_explore/: config.yaml  summary.json
results/duopoly_h3/: config.yaml  summary.json
results/llm_smoke/: config.yaml  summary.json
results/smith_explore/: config.yaml  summary.json
results/smith_h1/: config.yaml  summary.json
results/ssw_explore/: config.yaml  summary.json
results/ssw_h2/: config.yaml  summary.json
results/zi_baseline/: config.yaml  summary.json
src/agentic_trading/: __init__.py  bubbles.py  contamination.py  exchange.py  (+5 more)
tests/: test_gate_stage0.py  test_gate_stage1_exchange.py  test_gate_stage1_properties.py  test_gate_stage1_runner.py  test_gate_stage2.py  test_gate_stage2_units.py  test_gate_stage3_harness.py  test_gate_stage3_smoke.py  test_gate_stage4.py  test_gate_stage5.py  test_gate_stage5_engine.py  test_gate_stage5_metrics.py  test_gate_stage6.py  test_gate_stage6_benchmarks.py  test_gate_stage6_harness.py  test_gate_stage7.py
(+15 files in other folders)
