[project]
name = "agentic-trading"
version = "0.1.0"
description = "Agentic Trading: experimental economics with LLM agents — do markets of LLMs converge, bubble, and collude?"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.1",
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gate_stage0: Stage 0 gate — protocol, literature sweep & environment",
    "gate_stage1: Stage 1 gate — exchange engine correctness",
    "gate_stage2: Stage 2 gate — ZI baselines & Gode–Sunder calibration",
    "gate_stage3: Stage 3 gate — LLM agent harness",
    "gate_stage4: Stage 4 gate — Smith convergence experiment",
    "gate_stage5: Stage 5 gate — SSW bubbles experiment",
    "gate_stage6: Stage 6 gate — duopoly collusion experiment",
    "gate_stage7: Stage 7 gate — write-up & verification pack",
]
